updated drilldown feature dropdown

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -235,7 +235,7 @@
 		// alert("feature selection is " + featureSel);
 
 		if (websiteName.length > 0 && featureSel.length > 0 && onOrOffsite.length > 0 && featureX > 1){
-			urlToOpen = "SQ_drilldown.html?="+websiteName+"&="+featureSel+"&="+onOrOffsite;
+			urlToOpen = "SQ_drilldown.html?="+websiteName+"&="+featureSel+"&="+onOrOffsite+"&="+healthOrHarm;
 			window.open(urlToOpen ,"_self");
 		}
 		
@@ -554,7 +554,7 @@ rel="stylesheet" type="text/css">
 
 		  <br>
 	  
-		  <div class="input-group">
+		  <div class="form-group">
 
 			  <form id="dropdownFeature">
 				  <select id="selectFeat">
