--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -149,13 +149,20 @@
 					// 
 					// console.log("Losing mean = " + loseMean);
 					// console.log("Winning mean = " + winMean);
+
 				}
 				else {
 					console.log('Not same. Feature is: ' + blob[1]);
-					iFeatNames.push(blob[1]);
+					if (healthOrHarm == 'healthy' && parseInt(blob[9])>0){
+						console.log('feature added');
+						iFeatNames.push(blob[1]);
+					}
+					else if (healthOrHarm == 'harmful' && parseInt(blob[6])>0) {
+						iFeatNames.push(blob[1]);
+					}
+					
 				}
-			
-	
+
 			});
 		}
 		else {
@@ -185,7 +192,14 @@
 				}
 				else {
 					console.log('Not same. Feature is: ' + blob[1]);
-					iFeatNames.push(blob[1]);
+					
+					if (healthOrHarm == 'healthy' && parseInt(blob[9])>0){
+						console.log('feature added');
+						iFeatNames.push(blob[1]);
+					}
+					else if (healthOrHarm == 'harmful' && parseInt(blob[6])>0) {
+						iFeatNames.push(blob[1]);
+					}
 				};
 	
 			});
