--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -158,6 +158,7 @@
 						iFeatNames.push(blob[1]);
 					}
 					else if (healthOrHarm == 'harmful' && parseInt(blob[6])>0) {
+						console.log('feature added');
 						iFeatNames.push(blob[1]);
 					}
 					
@@ -198,6 +199,7 @@
 						iFeatNames.push(blob[1]);
 					}
 					else if (healthOrHarm == 'harmful' && parseInt(blob[6])>0) {
+						console.log('feature added');
 						iFeatNames.push(blob[1]);
 					}
 				};
