updated drilldown feature dropdown

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -227,7 +227,7 @@
 			for(var i = 0; i < iFeatNames.length; i++) {
 			
 				var opt = iFeatNames[i];
-				console.log(opt);
+				// console.log(opt);
 			
 				var el = document.createElement("option");
 				el.textContent = opt;
