updated onsite offsite checking

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -341,7 +341,7 @@ $(document).ready(function(){
 	var sd = parseFloat(winStd) || 2;
 	
 	var mu2 = parseFloat(loseMean) || 3;
-	console.log("Losing mean = " + loseMean + " mu2: " + mu));
+	console.log("Losing mean = " + loseMean + " mu2: " + mu);
 	
 	var sd2 = parseFloat(loseStd) || 1.5;
 
