--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -218,28 +218,73 @@
 	.always(function() {
 		console.log( "complete" );
 	});
-	
-	function popDropDown(){
-	
-		featureJSON.complete(function() {
-			console.log( "second complete - populating influential feature dropdown" );
+
+	featureJSON.complete(function() {
+		console.log( "second complete - populating influential feature dropdown" );
 		
-			var selectFeature = document.getElementById("selectFeat"); 
-			// console.log('Length of iFeatNames = '+ iFeatNames.length);
-			for(var i = 0; i < iFeatNames.length; i++) {
+		var selectFeature = document.getElementById("selectFeat"); 
+		// console.log('Length of iFeatNames = '+ iFeatNames.length);
+		for(var i = 0; i < iFeatNames.length; i++) {
 			
-				var opt = iFeatNames[i];
-				// console.log(opt);
+			var opt = iFeatNames[i];
+			// console.log(opt);
 			
-				var el = document.createElement("option");
-				el.textContent = opt;
-				el.value = opt;
-				selectFeature.appendChild(el);
+			var el = document.createElement("option");
+			el.textContent = opt;
+			el.value = opt;
+			selectFeature.appendChild(el);
+		}
+			
+			
+		var mu = parseFloat(winMean) || 5;
+		console.log("Winning mean = " + winMean + " mu: " + mu);
+
+		var sd = parseFloat(winStd) || 2;
+
+		var mu2 = parseFloat(loseMean) || 3;
+		console.log("Losing mean = " + loseMean + " mu2: " + mu);
+
+		var sd2 = parseFloat(loseStd) || 1.5;
+
+		ixMin = Math.round(Math.min(mu-3*sd,mu2-3*sd2));
+		ixMax = Math.round(Math.max(mu+3*sd,mu2+3*sd2));
+		ixRange = ixMax-ixMin;
+		ixInc = ixRange/100;
+
+
+		function normalDist() {
+			var iy = [];
+			iy2 = [];
+
+
+			for (var i = 0; i < ixMax; i+= ixInc) {
+
+				iy.push({x: i, y: (1/(sd*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu,2)/(2*Math.pow(sd,2)))});
+				iy2.push({x: i, y: (1/(sd2*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu2,2)/(2*Math.pow(sd2,2)))});
+
 			}
+
+
+			return [
+			{
+				values: iy,
+				key: 'Winning Distribution',
+				color: '#00cc00'
+			},
+			{
+				values: iy2,
+				key: 'Losing Distribution',
+				color: '#ff0000'
+			}
+			];
+
+		};
+			
+			
 		
-		});
+	});
 	
-	};
+
 	
 	function doStuff()
 	{
@@ -303,49 +348,7 @@ function initDataTables(){
 
 
 
-var mu = parseFloat(winMean) || 5;
-console.log("Winning mean = " + winMean + " mu: " + mu);
 
-var sd = parseFloat(winStd) || 2;
-
-var mu2 = parseFloat(loseMean) || 3;
-console.log("Losing mean = " + loseMean + " mu2: " + mu);
-
-var sd2 = parseFloat(loseStd) || 1.5;
-
-ixMin = Math.round(Math.min(mu-3*sd,mu2-3*sd2));
-ixMax = Math.round(Math.max(mu+3*sd,mu2+3*sd2));
-ixRange = ixMax-ixMin;
-ixInc = ixRange/100;
-
-
-function normalDist() {
-	var iy = [];
-	iy2 = [];
-
-
-	for (var i = 0; i < ixMax; i+= ixInc) {
-
-		iy.push({x: i, y: (1/(sd*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu,2)/(2*Math.pow(sd,2)))});
-		iy2.push({x: i, y: (1/(sd2*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu2,2)/(2*Math.pow(sd2,2)))});
-
-	}
-
-
-	return [
-	{
-		values: iy,
-		key: 'Winning Distribution',
-		color: '#00cc00'
-	},
-	{
-		values: iy2,
-		key: 'Losing Distribution',
-		color: '#ff0000'
-	}
-	];
-
-};
 
 
 	
@@ -353,7 +356,7 @@ $(document).ready(function(){
 	
 	initDataTables();
 	/* all other page load code*/
-	popDropDown();
+	// popDropDown();
 	
 	nv.addGraph(function() {  
 		var chart = nv.models.lineChart();
