--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -218,9 +218,9 @@
 	.always(function() {
 		console.log( "complete" );
 	});
-
-	function runAfterJSONComplete() {
-
+	
+	function popDropDown(){
+	
 		featureJSON.complete(function() {
 			console.log( "second complete - populating influential feature dropdown" );
 		
@@ -236,26 +236,10 @@
 				el.value = opt;
 				selectFeature.appendChild(el);
 			}
-			
-			
-			var mu = parseFloat(winMean) || 5;
-			console.log("Winning mean = " + winMean + " mu: " + mu);
-
-			var sd = parseFloat(winStd) || 2;
-
-			var mu2 = parseFloat(loseMean) || 3;
-			console.log("Losing mean = " + loseMean + " mu2: " + mu);
-
-			var sd2 = parseFloat(loseStd) || 1.5;
-
-			ixMin = Math.round(Math.min(mu-3*sd,mu2-3*sd2));
-			ixMax = Math.round(Math.max(mu+3*sd,mu2+3*sd2));
-			ixRange = ixMax-ixMin;
-			ixInc = ixRange/100;
-
+		
 		});
+	
 	};
-
 	
 	function doStuff()
 	{
@@ -317,23 +301,27 @@ function initDataTables(){
 
 };
 
+function setUpChart() {
+
+	var mu = parseFloat(winMean) || 5;
+	console.log("Winning mean = " + winMean + " mu: " + mu);
+
+	var sd = parseFloat(winStd) || 2;
+
+	var mu2 = parseFloat(loseMean) || 3;
+	console.log("Losing mean = " + loseMean + " mu2: " + mu);
+
+	var sd2 = parseFloat(loseStd) || 1.5;
+
+	ixMin = Math.round(Math.min(mu-3*sd,mu2-3*sd2));
+	ixMax = Math.round(Math.max(mu+3*sd,mu2+3*sd2));
+	ixRange = ixMax-ixMin;
+	ixInc = ixRange/100;
 
 
-
-
-
-	
-$(document).ready(function(){
-	
-	initDataTables();
-	/* all other page load code*/
-	// popDropDown();
-	
-	runAfterJSONComplete();
-	
 	function normalDist() {
 		var iy = [];
-		iy2 = [];
+		var iy2 = [];
 
 
 		for (var i = 0; i < ixMax; i+= ixInc) {
@@ -341,7 +329,7 @@ $(document).ready(function(){
 			iy.push({x: i, y: (1/(sd*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu,2)/(2*Math.pow(sd,2)))});
 			iy2.push({x: i, y: (1/(sd2*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu2,2)/(2*Math.pow(sd2,2)))});
 
-		};
+		}
 
 
 		return [
@@ -358,6 +346,18 @@ $(document).ready(function(){
 		];
 
 	};
+
+};
+
+
+	
+$(document).ready(function(){
+	
+	initDataTables();
+	/* all other page load code*/
+	popDropDown();
+	
+	setUpChart();
 	
 	nv.addGraph(function() {  
 		var chart = nv.models.lineChart();
