--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -137,9 +137,9 @@
 				featInflus.push(blob[0]);
 				
 				if (blob[1]==featureName) {
-					// console.log('Same. Feature is: ' + blob[1]);
+					console.log('Same. Feature is: ' + blob[1]);
 					// 		
-					console.log(featureName);
+					// console.log(featureName);
 					// 		console.log(blob[1]);
 					featInfl.push(blob[0]);
 					loseMean.push(blob[2]);
@@ -223,6 +223,50 @@
 	
 		featureJSON.complete(function() {
 			console.log( "second complete - populating influential feature dropdown" );
+
+			var mu = parseFloat(winMean) || 5;
+			console.log("Winning mean = " + winMean + " mu: " + mu);
+
+			var sd = parseFloat(winStd) || 2;
+
+			var mu2 = parseFloat(loseMean) || 3;
+			console.log("Losing mean = " + loseMean + " mu2: " + mu);
+
+			var sd2 = parseFloat(loseStd) || 1.5;
+
+			ixMin = Math.round(Math.min(mu-3*sd,mu2-3*sd2));
+			ixMax = Math.round(Math.max(mu+3*sd,mu2+3*sd2));
+			ixRange = ixMax-ixMin;
+			ixInc = ixRange/100;
+
+
+			function normalDist() {
+				var iy = [];
+				var iy2 = [];
+
+
+				for (var i = 0; i < ixMax; i+= ixInc) {
+
+					iy.push({x: i, y: (1/(sd*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu,2)/(2*Math.pow(sd,2)))});
+					iy2.push({x: i, y: (1/(sd2*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu2,2)/(2*Math.pow(sd2,2)))});
+
+				}
+
+
+				return [
+				{
+					values: iy,
+					key: 'Winning Distribution',
+					color: '#00cc00'
+				},
+				{
+					values: iy2,
+					key: 'Losing Distribution',
+					color: '#ff0000'
+				}
+				];
+
+			};
 		
 			var selectFeature = document.getElementById("selectFeat"); 
 			// console.log('Length of iFeatNames = '+ iFeatNames.length);
@@ -303,49 +347,7 @@ function initDataTables(){
 
 
 
-var mu = parseFloat(winMean) || 5;
-console.log("Winning mean = " + winMean + " mu: " + mu);
 
-var sd = parseFloat(winStd) || 2;
-
-var mu2 = parseFloat(loseMean) || 3;
-console.log("Losing mean = " + loseMean + " mu2: " + mu);
-
-var sd2 = parseFloat(loseStd) || 1.5;
-
-ixMin = Math.round(Math.min(mu-3*sd,mu2-3*sd2));
-ixMax = Math.round(Math.max(mu+3*sd,mu2+3*sd2));
-ixRange = ixMax-ixMin;
-ixInc = ixRange/100;
-
-
-function normalDist() {
-	var iy = [];
-	var iy2 = [];
-
-
-	for (var i = 0; i < ixMax; i+= ixInc) {
-
-		iy.push({x: i, y: (1/(sd*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu,2)/(2*Math.pow(sd,2)))});
-		iy2.push({x: i, y: (1/(sd2*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu2,2)/(2*Math.pow(sd2,2)))});
-
-	}
-
-
-	return [
-	{
-		values: iy,
-		key: 'Winning Distribution',
-		color: '#00cc00'
-	},
-	{
-		values: iy2,
-		key: 'Losing Distribution',
-		color: '#ff0000'
-	}
-	];
-
-};
 
 
 
