updated onsite offsite checking

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -188,7 +188,7 @@
 				featInflus.push(blob[0]);
 				
 				if (blob[1]==featureName) {
-					// console.log('Same. Feature is: ' + blob[1]);
+					console.log('Same. Feature is: ' + blob[1]);
 					// 		
 					// console.log(featureName);
 					// 		console.log(blob[1]);
