--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -329,13 +329,13 @@
 
 function initDataTables(){
 	
-	console.log(healthOrHarm + " " + websiteName + " " + JSONfilename  + " " +  featureNameJSON);
+	// console.log(healthOrHarm + " " + websiteName + " " + JSONfilename  + " " +  featureNameJSON);
 
 		$('#example1').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_"+JSONfilename+".json",
 			"sAjaxDataProp": healthOrHarm + "." + featureNameJSON,
-			"bDeferRender": true,
+			//"bDeferRender": true,
 			"sDom": "<'row-fluid'<'span6'T><'span6'f>r>t<'row-fluid'<'span6'i><'span6'p>>",
 			"oTableTools": {
 				"aButtons": [
