Loading of JSON outside datatables

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -105,12 +105,12 @@
 	if (onOrOffsite == "onsite") {
 		JSONfilename = "XDrill";
 		highlightFilename = "json/summary/"+websiteName+"_Xhat.json";
-		drilldownFilename = "json/summary/"+websiteName+"_XDrill.json";
+		drilldownFilename = "json/drilldown/"+websiteName+"_XDrill.json";
 	}
 	else if (onOrOffsite == "offsite"){
 		JSONfilename = "XDrillOff";
 		highlightFilename = "json/summary/"+websiteName+"_XhatOff.json";
-		drilldownFilename = "json/summary/"+websiteName+"_XDrillOff.json";
+		drilldownFilename = "json/drilldown/"+websiteName+"_XDrillOff.json";
 	};
 	
 	if (healthOrHarm == 'healthy') {
