Loading of JSON outside datatables

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -380,8 +380,8 @@ function initDataTables(){
 
 var drilldownJSON = $.getJSON(drilldownFilename, function(results) {
 	console.log( "drilldown JSON loading success" );
-	
-	blobJSON = results.healthy.featureNameJSON.value;
+
+	blobJSON = results.[healthOrHarm].[featureNameJSON].value;
 	
 	// $.each(results.healthy.featureNameJSON, function(index) {
 	// 	
