Loading of JSON outside datatables

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -415,10 +415,11 @@ function drilldownDataIn() {
 //------------------------------------------------------------------
 
 $(document).ready(function(){
-	
-	/*initDataTables();*/
-	
+
 	drilldownDataIn();
+	
+	initDataTables();
+	
 	/* all other page load code*/
 	popDropDown();
 
