Loading of JSON outside datatables

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -392,6 +392,7 @@ var drilldownJSON = $.getJSON(drilldownFilename, function(results) {
 })
 .done(function() {
 	console.log( "second success" );
+	console.log(blobJSON);
 })
 .fail(function() {
 	console.log( "error" );
