Loading of JSON outside datatables

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -406,7 +406,7 @@ function drilldownDataIn() {
 		
 		console.log( "second complete - drilldown data loaded" );
 		
-		blobJSON = drilldownJSON[healthOrHarm][featureNameJSON];
+		blobJSON = drilldownJSON[healthOrHarm[featureNameJSON]];
 		
 		initDataTables();
 
