--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -383,13 +383,15 @@ var drilldownJSON = $.getJSON(drilldownFilename, function(results) {
 	console.log( "drilldown JSON loading success" );
 	console.log("healthOrHarm: " + healthOrHarm);
 	console.log("featureNameJSON: " + featureNameJSON);
-	console.log(results.length);
+	// console.log(results.length);
 	$.each(results[healthOrHarm[featureNameJSON]], function(index) {
 		
-		blobData = results[healthOrHarm[featureNameJSON[index]]];
-		blobJSON.push(blobData);
+		console.log(index);
 		
-		console.log(blobData[0]);
+		// blobData = results[healthOrHarm[featureNameJSON[index]]];
+// 		blobJSON.push(blobData);
+// 		
+// 		console.log(blobData[0]);
 		
 	});
 	
