--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -390,7 +390,7 @@ var drilldownJSON = $.getJSON(drilldownFilename, function(results) {
 
 		if (featureNameKey == featureNameJSON) {
 			$.each(featureNameKey, function(index) {
-				console.log("from JSON L2.1: "+results[healthOrHarm[featureNameKey].html_id);
+				console.log("from JSON L2.1: "+results[healthOrHarm[featureNameKey]].html_id);
 				// console.log("from JSON L2.2: "+featureNameKey.feature_value);
 // 				console.log("from JSON L2.3: "+featureNameKey.cluster_win_mean);
 				// blobArray.push([featureNameKey[index[0]], featureNameKey[index[1]], featureNameKey[index[2]], featureNameKey[index[3]]]);
