Loading of JSON outside datatables

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -415,6 +415,8 @@ function drilldownDataIn() {
 	
 	drilldownJSON.complete(function() {
 		
+		console.log(JSON.stringify(drilldownJSON.healthy.average_backlink_dale_chall_readability[0]));
+		
 		console.log( "second complete - drilldown data loaded" );
 		
 		// blobJSON = drilldownJSON[healthOrHarm[featureNameJSON]];
