--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -379,27 +379,25 @@ function initDataTables(){
 //------------------------------------------------------------------
 
 
-var drilldownJSON = $.getJSON(drilldownFilename, function(results) {
+var drilldownJSON = $.getJSON(drilldownFilename, function(result) {
 	console.log( "drilldown JSON loading success" );
 	console.log("healthOrHarm: " + healthOrHarm);
 	console.log("featureNameJSON: " + featureNameJSON);
 	// console.log(results.length);
-	$.each(results[healthOrHarm], function(featureNameKey) {
+	$.each(result, function(i, field) {
 
-		console.log("from JSON L1: "+featureNameKey);
+		console.log("from JSON L1: "+i + ":"+ field);
 
-		if (featureNameKey == featureNameJSON) {
-			$.each(featureNameKey, function(index) {
-				console.log("from JSON L2.1: "+JSON.stringify(featureNameKey[index].html_id));
+		// if (featureNameKey == featureNameJSON) {
+			// 			$.each(featureNameKey, function(index) {
+				// 				console.log("from JSON L2.1: "+JSON.stringify(featureNameKey[index].html_id));
+				// 
+				// 				// blobArray.push([JSON.stringify(featureNameKey[index].html_id), JSON.stringify(featureNameKey[index].feature_value], JSON.stringify(featureNameKey[index].cluster_win_mean], JSON.stringify(featureNameKey[index].delta]);
+				// 			});
+			// }
 
-				// blobArray.push([JSON.stringify(featureNameKey[index].html_id), JSON.stringify(featureNameKey[index].feature_value], JSON.stringify(featureNameKey[index].cluster_win_mean], JSON.stringify(featureNameKey[index].delta]);
-			});
-		}
-		
-			
-	});
-	
-	
+		});
+
 })
 .done(function() {
 	console.log( "second success" );
