Loading of JSON outside datatables

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -384,10 +384,11 @@ var drilldownJSON = $.getJSON(drilldownFilename, function(result) {
 	console.log("healthOrHarm: " + healthOrHarm);
 	console.log("featureNameJSON: " + featureNameJSON);
 	// console.log(results.length);
-	$.each(result[healthOrHarm[featureNameJSON]], function(i, field) {
+	$.each(result[healthOrHarm], function(i, field) {
 
-		console.log("from JSON L1: "+i + ":"+ JSON.stringify(field));
-
+		if (i == featureNameJSON) {
+			console.log("from JSON L1: "+i + ":"+ JSON.stringify(field));
+		};
 		// if (featureNameKey == featureNameJSON) {
 			// 			$.each(featureNameKey, function(index) {
 				// 				console.log("from JSON L2.1: "+JSON.stringify(featureNameKey[index].html_id));
