--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -392,6 +392,7 @@ var drilldownJSON = $.getJSON(drilldownFilename, function(result) {
 			$.each(field, function(j, subField) {
 				console.log("from JSON L2: "+j + ":"+ JSON.stringify(subField));
 				blobArray.push([subField.html_id, subField.feature_value, subField.cluster_win_mean, subField.delta]);
+				console.log("blobArray: "+blobArray[j]);
 			});
 			
 		};
